packages/isar_generator/test/errors/property/enum_object_type.dart
// enums do not support object values

import 'package:isar/isar.dart';

@collection
class Model {
  Id? id;

  @Enumerated(EnumType.value, 'value')
  late MyEnum prop;
}

enum MyEnum {
  optionA;

  final value = EmbeddedModel();
}

@embedded
class EmbeddedModel {}
